--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Profile &mdash; Free Website Template, Free HTML5 Template by freehtml5.co</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
+	
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
 	<meta name="author" content="freehtml5.co" />
 
@@ -98,17 +99,15 @@
 						<li><span class="first-block">Full Name:</span><span class="second-block">Giuseppe Palminteri</span></li>
 						<li><span class="first-block">Phone:</span><span class="second-block">+39 324 098 4163</span></li>
 						<li><span class="first-block">Email:</span><span class="second-block">giuspalminteri@gmail.com</span></li>
-						<li><span class="first-block">Website:</span><span class="second-block">www..com</span></li>
 						<li><span class="first-block">Address:</span><span class="second-block">23rd Street, No.3, Triscina (TP), Italy</span></li>
 					</ul>
 				</div>
 				<div class="col-md-8">
 					<h2>Professional Profile</h2> <p>I'm Giuseppe Palminteri, graduate in Data Science & Business Informatics with a strong background in Business Economics. This combination of expertise allows me to approach business challenges with an integrated perspective, blending data analysis and the development of advanced predictive models.</p> <p>In the field of Data Analytics, I specialize in analyzing large datasets using technologies such as Data Warehousing, ETL, Power BI, SQL, and R, to optimize data-driven decision-making processes and support business strategies with precise, actionable insights.</p> <p>In Data Science, I have experience in implementing machine learning models and applying Natural Language Processing (NLP) techniques, particularly within the financial and banking sectors, including risk assessment and predictive analysis of market trends and behaviors.</p> <p>What sets me apart is my ability to solve complex problems with both an analytical and practical approach, combining my economic background with my training in computer science to provide innovative, data-driven solutions that create tangible value for businesses.</p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-twitter2"></i></a></li>
-							<li><a href="#"><i class="icon-facebook3"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble2"></i></a></li>
+							<li><a href="#" target="_blank"><i class="icon-instagram2"></i></a></li>
+							<li><a href="#" target="_blank"><i class="icon-linkedin2"></i></a></li>
+							<li><a href="https://github.com/Mipal99" target="_blank"><i class="icon-github2"></i></a></li>
 						</ul>
 					</p>
 				</div>
@@ -632,14 +631,12 @@
 		</div>
 	</div>
 
-	<div id="map" class="fh5co-map"></div>
-	</div>
 	
 	<div id="fh5co-footer">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-12">
-					<p>&copy; 2017 Free HTML5 Template. All Rights Reserved. <br>Designed by <a href="http://freehtml5.co" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.com" target="_blank">Unsplash</a></p>
+				<div class="col-md-15">
+					<p> &copy; Giuseppe Palminteri</p>
 				</div>
 			</div>
 		</div>
