--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="profile-thumb" style="background: url(images/WhatsApp-Image-2022-03-10-at-15.40.04.jpg);"></div>
 							<h1><span>Giuseppe Palminteri</span></h1>
-							<h3><span>Data Scientist/ Data Analyst</span></h3>
+							<h3><span>Data Scientist</span></h3>
 							<p>
 								<!-- <ul class="fh5co-social-icons">
 									<li><a href="#"><i class="icon-twitter2"></i></a></li>
