--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-							<div class="profile-thumb" style="background: url(images/WhatsApp-Image-2022-03-10-at-15.40.04.jpg);"></div>
+							<div class="profile-thumb" style="background: url(images/profile-image.jpg);"></div>
 							<h1><span>Giuseppe Palminteri</span></h1>
 							<h3><span>Data Scientist</span></h3>
 							<p>
