--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
       })();
     </script>
 
+	<style>
+		* {
+			font-family:'Times New Roman', Times, serif !important;
+		}
+	</style>
 
 	</head>
 	<body>
