--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
 	<div class="fh5co-loader"></div>
 	
 	<div id="page">	
-	<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image:url(images/cover_bg_3.jpg);" data-stellar-background-ratio="0.5">
+	<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-							<div class="profile-thumb" style="background: url(images/profile-image.jpg);"></div>
+							<div class="profile-thumb" style="background: url(images/profile-image.jpg); background-position-y: 28%;"></div>
 							<h1><span>Giuseppe Palminteri</span></h1>
 							<h3><span>Data Scientist</span></h3>
 							<p>
