--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 									<li><a href="#"><i class="icon-dribbble2"></i></a></li>
 								</ul> -->
 								<ul class="fh5co-social-icons">
-									<li><a href="#" target="_blank"><i class="icon-instagram2"></i></a></li>
-									<li><a href="#" target="_blank"><i class="icon-linkedin2"></i></a></li>
+									<li><a href="https://www.instagram.com/_mipal_/" target="_blank"><i class="icon-instagram2"></i></a></li>
+									<li><a href="https://www.linkedin.com/in/giuseppe-palminteri-3012b22ab/" target="_blank"><i class="icon-linkedin2"></i></a></li>
 									<li><a href="https://github.com/Mipal99" target="_blank"><i class="icon-github2"></i></a></li>
 								</ul>
 							</p>
