--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="profile-thumb" style="background: url(images/profile-image.jpg); background-position-y: 28%;"></div>
-							<h1><span>Giuseppe Palminteri 1</span></h1>
+							<h1><span>Giuseppe Palminteri</span></h1>
 							<h3><span>Data Scientist</span></h3>
 							<p>
 								<!-- <ul class="fh5co-social-icons">
