--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
 							<ul class="stuff">
 								<li><i class="icon-heart2"></i>249</li>
 								<li><i class="icon-eye2"></i>308</li>
-								<li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
+								<li><a href="https://github.com/Mipal99/Tesi/blob/main/Tesi_magistraleDS_Giuseppe_Palminteri%20.pdf">Read More<i class="icon-arrow-right22"></i></a></li>
 							</ul>
 						</div> 
 					</div>
