--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 					</ul>
 				</div>
 				<div class="col-md-8">
-					<h2>Professional Profile</h2> <p>I'm Giuseppe Palminteri, graduate in Data Science & Business Informatics with a strong background in Business Economics. This combination of expertise allows me to approach business challenges with an integrated perspective, blending data analysis and the development of advanced predictive models.</p> <p>In the field of Data Analytics, I specialize in analyzing large datasets using technologies such as Data Warehousing, ETL, Power BI, SQL, and R, to optimize data-driven decision-making processes and support business strategies with precise, actionable insights.</p> <p>In Data Science, I have experience in implementing machine learning models and applying Natural Language Processing (NLP) techniques, particularly within the financial and banking sectors, including risk assessment and predictive analysis of market trends and behaviors.</p> <p>What sets me apart is my ability to solve complex problems with both an analytical and practical approach, combining my economic background with my training in computer science to provide innovative, data-driven solutions that create tangible value for businesses.
+					<h2>Professional Profile</h2> <p>I’m Giuseppe Palminteri, a Data Scientist specialized specialized in developing data-driven solutions in the financial sector. I hold a background in Data Science & Business Informatics and Business Administration, which allows me to bridge technical expertise with strategic vision, delivering advanced analytics and predictive models that support decision-making and create tangible business value.
 						
 
 				</div>
