Prova experience date

--- a/index.html
+++ b/index.html
@@ -116,7 +116,6 @@
 			<div class="row">
 				<div class="col-md-4">
 					<ul class="info">
-						<li><span class="first-block">Full Name:</span><span class="second-block">Giuseppe Palminteri</span></li>
 						<li><span class="first-block">Phone:</span><span class="second-block">+39 324 098 4163</span></li>
 						<li><span class="first-block">Email:</span><span class="second-block">giuspalminteri@gmail.com</span></li>
 						<li><span class="first-block">Address:</span><span class="second-block">C.vetrano (TP), Italy</span></li>
@@ -164,8 +163,10 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Data Analyst Intern</h3>
-									<span class="company">PWC - 2024 - current</span>
+									<h3 class="timeline-title">Data Engineer Intern</h3>
+								
+									<span class="company">PwC</span>
+  									<span class="date">Dec 2024 - May 2025</span>
 								</div>
 								<div class="timeline-body">
 									<p>As a Data Analyst Intern at PwC, I analyze data to support Audit, Advisory, and Digital Innovation, optimizing decision-making and enhancing risk management across Tax and Legal services.<p>
