--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 					</ul>
 				</div>
 				<div class="col-md-8">
-					<h2>Professional Profile</h2> <p>I’m Giuseppe Palminteri, a Data Scientist specialized specialized in developing data-driven solutions in the financial sector. I hold a background in Data Science & Business Informatics and Business Administration, which allows me to bridge technical expertise with strategic vision, delivering advanced analytics and predictive models that support decision-making and create tangible business value.
+					<h2>Professional Profile</h2> <p>I’m Giuseppe Palminteri, a Data Scientist specialized in developing data-driven solutions in the financial sector. I hold a master in Data Science and a bachelor in Business Administration, which allows me to bridge technical expertise with strategic vision, delivering advanced analytics and predictive models that support decision-making and create tangible business value.
 						
 
 				</div>
