--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					
+					<h2>Professional profile</h2>
 				</div>
 			</div>
 			<div class="row">
