--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
 	</div> -->
 
 	<div id="fh5co-consult">
-		<div class="video fh5co-video" style="background-image: url(images/biglietto_saluto.jpg);">
+		<div class="video fh5co-video" style="background-image: url(images/biglietto_saluto_LE_upscale_ultra_x4_intensity_10_size_of_changes_10.jpg);">
 			<div class="overlay"></div>
 		</div>
 		<div class="choose animate-box">
