--- a/index.html
+++ b/index.html
@@ -122,12 +122,8 @@
 					</ul>
 				</div>
 				<div class="col-md-8">
-					<h2>Professional Profile</h2> <p>I’m Giuseppe Palminteri, a Data Scientist specialized in developing data-driven solutions in the financial sector. I hold a master in Data Science and a bachelor in Business Administration, which allows me to bridge technical expertise with strategic vision, delivering advanced analytics and predictive models that support decision-making and create tangible business value.
+					<p>I’m Giuseppe Palminteri, a Data Scientist specialized in developing data-driven solutions in the financial sector. I hold a master in Data Science and a bachelor in Business Administration, which allows me to bridge technical expertise with strategic vision, delivering advanced analytics and predictive models that support decision-making and create tangible business value.
 						
-
-				</div>
-			</div>
-		</div>
 	</div>
 
 	<div id="fh5co-resume" class="fh5co-bg-color">
