Cambio testi work exp

--- a/index.html
+++ b/index.html
@@ -139,21 +139,30 @@
 						<li class="timeline-heading text-center animate-box">
 						
 							<div><h3>Work Experience</h3></div>
-							<!--
-						</li>
+							<li class="animate-box">
+  <div class="timeline-badge"><i class="icon-suitcase"></i></div>
+  <div class="timeline-panel">
+    <div class="timeline-heading">
+      <h3 class="timeline-title">Data Scientist</h3>
+      <span class="company">Reply</span>
+      <br>
+      <span class="location"><i class="icon-map-marker"></i> Rome</span>
+      <span class="date"> | Sep 2025 - Present</span>
+    </div>
+    <div class="timeline-body">
+      <p>
+        As a Data Scientist in the financial services domain, I focus on developing and validating models to support risk management and decision-making, with a particular emphasis on <b>Credit Risk</b>.
+      </p>
+      <ul>
+        <li>Designed and implemented <b>machine learning models</b> for credit risk assessment, anomaly detection, and predictive analytics.</li>
+        <li>Performed <b>data exploration and feature engineering</b> to extract key insights from structured and unstructured financial data.</li>
+        <li>Collaborated with risk management teams to ensure <b>model explainability</b>, and compliance with regulatory requirements.</li>
+        <li>Developed dashboards and reports to communicate results effectively to stakeholders.</li>
+      </ul>
+    </div>
+  </div>
+</li>
 
-						<li class="animate-box timeline-unverted">
-							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
-							<div class="timeline-panel">
-								<div class="timeline-heading">
-									<h3 class="timeline-title">Senior Developer</h3>
-									<span class="company">Company Name - 2016 - Current</span>
-								</div>
-								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-								</div>
-							</div>
-							-->
 						</li>
 						<li class="timeline-inverted animate-box">
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
@@ -161,15 +170,18 @@
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Data Engineer Intern</h3>
 									<span class="company">PwC</span>
-  									<span class="date">Dec 2024 - May 2025</span>
-								</div>
-								<div class="timeline-body">
-									<p>As a Data Analyst Intern at PwC, I analyze data to support Audit, Advisory, and Digital Innovation, optimizing decision-making and enhancing risk management across Tax and Legal services.<p>
+<br>
+<span class="location"><i class="icon-map-marker"></i> Milan</span>
+<span class="date"> | Dec 2024 - May 2025</span>
+</div>
+<div class="timeline-body">
+  <p>
+    As a Data Engineer Intern at PwC, I contributed to digital transformation projects by supporting clients in their transition to modern data platforms.
+  </p>
+</div>
+</div>
+</li>
 
-
-								</div>
-							</div>
-						</li>
 						<!--
 						<li class="animate-box timeline-unverted">
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
