--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Data Engineer Intern</h3>
+									<h3 class="timeline-title">Data Engineer</h3>
 									<span class="company">PwC</span>
 <br>
 <span class="location"><i class="icon-map-marker"></i> Milan</span>
