Spazi tra scritte

--- a/index.html
+++ b/index.html
@@ -143,13 +143,14 @@
   <div class="timeline-badge"><i class="icon-suitcase"></i></div>
   <div class="timeline-panel">
     <div class="timeline-heading">
-      <h3 class="timeline-title">Data Scientist</h3>
-      <span class="company">Reply</span>
-      <br>
-      <span class="location"><i class="icon-map-marker"></i> Rome</span>
-      <span class="date"> | Sep 2025 - Present</span>
-    </div>
-    <div class="timeline-body">
+  <h3 class="timeline-title">Data Scientist</h3>
+  <span class="company">Reply</span>
+  <div class="meta">
+    <span class="location"><i class="icon-map-marker"></i> Rome</span>
+    <span class="date"> | Sep 2025 - Present</span>
+  </div>
+</div>
+<div class="timeline-body">
       <p>
         As a Data Scientist in the financial services domain, I focus on developing and validating models to support risk management and decision-making, with a particular emphasis on <b>Credit Risk</b>.
       </p>
