Altra modifica badge

--- a/index.html
+++ b/index.html
@@ -171,8 +171,13 @@
 </div>
 <div class="timeline-body">
   <p>
-    As a Data Engineer Intern at PwC, I contributed to digital transformation projects by supporting clients in their transition to modern data platforms.
-  </p>
+    As a Data Engineer Intern, I contributed to digital transformation projects by supporting clients in their transition to modern data platforms.
+      </p>
+      <ul>
+        <li>Supported <b>data migration</b> from legacy ERP systems to <b>cloud-based solutions</b>, ensuring alignment through workshops and continuous client collaboration.</li>
+        <li>Designed and implemented <b>data warehouses</b>, ETL processes and pipelines on <b>Microsoft Fabric</b>, consolidating enterprise data for analytical use.</li>
+        <li>Developed <b>Power BI data models</b>, created business KPIs and built dashboards to provide actionable insights for strategic decision-making.</li>
+      </ul>
 </div>
 </div>
 </li>
