--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 					</ul>
 				</div>
 				<div class="col-md-8">
-					<p>I’m Giuseppe Palminteri, a Data Scientist specialized in developing data-driven solutions in the financial sector. I hold a master in Data Science and a bachelor in Business Administration, which allows me to bridge technical expertise with strategic vision, delivering advanced analytics and predictive models that support decision-making and create tangible business value.
+					<p>I’m Giuseppe Palminteri, a Data Scientist specialized in developing data-driven solutions in the financial sector. <b>I hold a master in Data Science and a bachelor in Business Administration</b>, which allows me to bridge technical expertise with strategic vision, delivering advanced analytics and predictive models that support decision-making and create tangible business value.
 						
 	</div>
 
@@ -152,7 +152,7 @@
 </div>
 <div class="timeline-body">
       <p>
-        As a Data Scientist in the financial services domain, I focus on developing and validating models to support risk management and decision-making, with a particular emphasis on <b>Credit Risk</b>.
+        As a Data Scientist in the financial services domain, I focus on developing and validating models to support risk management and decision-making, with a particular emphasis on Credit Risk.
       </p>
     </div>
   </div>
@@ -162,21 +162,18 @@
 						<li class="timeline-inverted animate-box">
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
-								<div class="timeline-heading">
-									<h3 class="timeline-title">Data Engineer</h3>
-									<span class="company">PwC</span>
-<br>
-<span class="location"><i class="icon-map-marker"></i> Milan</span>
-<span class="date"> | Dec 2024 - May 2025</span>
-</div>
-<div class="timeline-body">
-  <p>
-    As a Data Engineer Intern, I contributed to digital transformation projects by supporting clients in their transition to modern data platforms.
-      </p>
-      <ul>
-        <li>Supported <b>data migration</b> from legacy ERP systems to <b>cloud-based solutions</b>, ensuring alignment through workshops and continuous client collaboration.</li>
-        <li>Designed and implemented <b>data warehouses</b>, ETL processes and pipelines on <b>Microsoft Fabric</b>, consolidating enterprise data for analytical use.</li>
-        <li>Developed <b>Power BI data models</b>, created business KPIs and built dashboards to provide actionable insights for strategic decision-making.</li>
+    <div class="timeline-heading">
+        <h3 class="timeline-title">Data Engineer</h3>
+        <span class="company">PwC</span>
+        <div class="meta">
+            <span class="location"><i class="icon-map-marker"></i> Milan</span>
+            <span class="date"> | Dec 2024 - May 2025</span>
+        </div>
+    </div>
+    <div class="timeline-body">
+        <p>
+
+    During my internship as a Data Engineer, I actively contributed to digital transformation projects, driving the transition to modern data platforms. I executed the <b>data migration</b> from legacy systems to cloud-based solutions. <b>I designed and implemented Data Warehouses and ETL processes on Microsoft Fabric</b>, consolidating enterprise data for analytical purposes. Additionally, <b>I developed Power BI data models, defined business KPIs, and built dashboards</b> to deliver actionable insights that support strategic decision-making.
       </ul>
 </div>
 </div>
