Modifiche work exp

--- a/index.html
+++ b/index.html
@@ -152,12 +152,20 @@
 </div>
 <div class="timeline-body">
       <p>
-        As a Data Scientist in the financial services domain, I focus on developing and validating models to support risk management and decision-making, with a particular emphasis on <b>Credit Risk</b>.
+        As a Data Scientist in the financial services domain, I focus on developing and validating models to support risk management and decision-making, with a particular emphasis on Credit Risk.
       </p>
     </div>
   </div>
 </li>
-
+<!--
+<div class="timeline-panel">
+    <div class="timeline-heading">
+  <h3 class="timeline-title">Data Scientist</h3>
+  <span class="company">Reply</span>
+  <div class="meta">
+    <span class="location"><i class="icon-map-marker"></i> Rome</span>
+    <span class="date"> | Sep 2025 - Present</span>
+-->
 						</li>
 						<li class="timeline-inverted animate-box">
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
@@ -165,19 +173,15 @@
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Data Engineer</h3>
 									<span class="company">PwC</span>
-<br>
-<span class="location"><i class="icon-map-marker"></i> Milan</span>
-<span class="date"> | Dec 2024 - May 2025</span>
+									<div class="meta">
+    <span class="location"><i class="icon-map-marker"></i> Milan</span>
+    <span class="date"> | Dec 2024 - May 2025</span>
+
 </div>
 <div class="timeline-body">
   <p>
-    As a Data Engineer Intern, I contributed to digital transformation projects by supporting clients in their transition to modern data platforms.
-      </p>
-      <ul>
-        <li>Supported <b>data migration</b> from legacy ERP systems to <b>cloud-based solutions</b>, ensuring alignment through workshops and continuous client collaboration.</li>
-        <li>Designed and implemented <b>data warehouses</b>, ETL processes and pipelines on <b>Microsoft Fabric</b>, consolidating enterprise data for analytical use.</li>
-        <li>Developed <b>Power BI data models</b>, created business KPIs and built dashboards to provide actionable insights for strategic decision-making.</li>
-      </ul>
+    During my internship as a Data Engineer, I actively contributed to digital transformation projects, driving the transition to modern data platforms. I executed the <b>data migration</b> from legacy ERP systems to cloud-based solutions, ensuring alignment and consistency through dedicated workshops and continuous collaboration with clients. <b>I designed and implemented Data Warehouses and ETL processes on Microsoft Fabric</b>, consolidating enterprise data for analytical purposes. Additionally, <b> I developed Power BI data models, defined business KPIs, and built dashboards </b>to deliver actionable insights that support strategic decision-making.
+</p>
 </div>
 </div>
 </li>
@@ -195,6 +199,14 @@
 								</div>
 							</div>
 						</li>
+
+						<div class="timeline-panel">
+    <div class="timeline-heading">
+  <h3 class="timeline-title">Data Scientist</h3>
+  <span class="company">Reply</span>
+  <div class="meta">
+    <span class="location"><i class="icon-map-marker"></i> Rome</span>
+    <span class="date"> | Sep 2025 - Present</span>
 						--->
 						<br>
 						<li class="timeline-heading text-center animate-box">
