--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 									<div class="meta">
     <span class="location"><i class="icon-map-marker"></i> Milan</span>
     <span class="date"> | Dec 2024 - May 2025</span>
-
+</div>
 </div>
 <div class="timeline-body">
   <p>
@@ -207,8 +207,9 @@
   <div class="meta">
     <span class="location"><i class="icon-map-marker"></i> Rome</span>
     <span class="date"> | Sep 2025 - Present</span>
-						--->
-						<br>
+						
+						 --->
+						 <br>
 						<li class="timeline-heading text-center animate-box">
 							<div><h3>Education</h3></div>
 						</li>
