--- a/index.html
+++ b/index.html
@@ -183,33 +183,7 @@
     During my internship as a Data Engineer, I actively contributed to digital transformation projects, driving the transition to modern data platforms. I executed the <b>data migration</b> from legacy ERP systems to cloud-based solutions, ensuring alignment and consistency through dedicated workshops and continuous collaboration with clients. <b>I designed and implemented Data Warehouses and ETL processes on Microsoft Fabric</b>, consolidating enterprise data for analytical purposes. Additionally, <b> I developed Power BI data models, defined business KPIs, and built dashboards </b>to deliver actionable insights that support strategic decision-making.
 </p>
 </div>
-</div>
-</li>
-
-						<!--
-						<li class="animate-box timeline-unverted">
-							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
-							<div class="timeline-panel">
-								<div class="timeline-heading">
-									<h3 class="timeline-title">UI/UX Designer</h3>
-									<span class="company">Company Name - 2010 - 2012</span>
-								</div>
-								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-								</div>
-							</div>
-						</li>
-
-						<div class="timeline-panel">
-    <div class="timeline-heading">
-  <h3 class="timeline-title">Data Scientist</h3>
-  <span class="company">Reply</span>
-  <div class="meta">
-    <span class="location"><i class="icon-map-marker"></i> Rome</span>
-    <span class="date"> | Sep 2025 - Present</span>
-						
-						 --->
-						 <br>
+</div>					 <br>
 						<li class="timeline-heading text-center animate-box">
 							<div><h3>Education</h3></div>
 						</li>
