Descrizione lavoro DS

--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
 </div>
 <div class="timeline-body">
       <p>
-        As a Data Scientist in the financial services domain, I focus on developing and validating models to support risk management and decision-making, with a particular emphasis on Credit Risk.
-      </p>
+        As a Data Scientist, I design and implement machine learning models for credit risk assessment, anomaly detection, and predictive analytics, while performing thorough data exploration and feature engineering to extract key insights from both structured and unstructured financial data. 
+	</p>
     </div>
   </div>
 </li>
