--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   <div class="timeline-panel">
     <div class="timeline-heading">
   <h3 class="timeline-title">Data Scientist</h3>
-  <span class="company">Reply</span>
+  <span class="company"><b>Reply</b></span>
   <div class="meta">
     <span class="location"><i class="icon-map-marker"></i> Rome</span>
     <span class="date"> | Sep 2025 - Present</span>
@@ -172,7 +172,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Data Engineer</h3>
-									<span class="company">PwC</span>
+									<span class="company"><b>PwC</b></span>
 									<div class="meta">
     <span class="location"><i class="icon-map-marker"></i> Milan</span>
     <span class="date"> | Dec 2024 - May 2025</span>
