--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 					</ul>
 				</div>
 				<div class="col-md-8">
-					<p>I’m Giuseppe Palminteri, a Data Scientist specialized in developing data-driven solutions in the financial sector. I hold a master in Data Science and a bachelor in Business Administration, which allows me to bridge technical expertise with strategic vision, delivering advanced analytics and predictive models that support decision-making and create tangible business value.
+					<p>I’m Giuseppe Palminteri, a Data Scientist specialized in developing data-driven solutions in the financial sector. <b>I hold a master in Data Science and a bachelor in Business Administration</b>, which allows me to bridge technical expertise with strategic vision, delivering advanced analytics and predictive models that support decision-making and create tangible business value.
 						
 	</div>
 
@@ -180,7 +180,7 @@
 </div>
 <div class="timeline-body">
   <p>
-    During my internship as a Data Engineer, I actively contributed to digital transformation projects, driving the transition to modern data platforms. I executed the <b>data migration</b> from legacy ERP systems to cloud-based solutions, ensuring alignment and consistency through dedicated workshops and continuous collaboration with clients. <b>I designed and implemented Data Warehouses and ETL processes on Microsoft Fabric</b>, consolidating enterprise data for analytical purposes. Additionally, <b> I developed Power BI data models, defined business KPIs, and built dashboards </b>to deliver actionable insights that support strategic decision-making.
+    During my internship as a Data Engineer, I actively contributed to digital transformation projects, driving the transition to modern data platforms. I executed the <b>data migration</b> from legacy systems to cloud-based solutions, ensuring alignment and consistency through dedicated workshops and continuous collaboration with clients. <b>I designed and implemented Data Warehouses and ETL processes on Microsoft Fabric</b>, consolidating enterprise data for analytical purposes. Additionally, <b> I developed Power BI data models, defined business KPIs, and built dashboards </b>to deliver actionable insights that support strategic decision-making.
 </p>
 </div>
 </div>					 <br>
