--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 					</ul>
 				</div>
 				<div class="col-md-8">
-					<p>I’m Giuseppe Palminteri, a Data Scientist specialized in developing data-driven solutions in the financial sector. <b>I hold a master in Data Science and a bachelor in Business Administration</b>, which allows me to bridge technical expertise with strategic vision, delivering advanced analytics and predictive models that support decision-making and create tangible business value.
+					<p>I’m Giuseppe Palminteri, a Data Scientist specialized in developing data-driven solutions in the financial sector. <br> <b>I hold a master in Data Science and a bachelor in Business Administration</b>, which allows me to bridge technical expertise with strategic vision, delivering advanced analytics and predictive models that support decision-making and create tangible business value.
 						
 	</div>
 
