--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
 					</ul>
 				</div>
 				<div class="col-md-8">
-					<p>I’m Giuseppe Palminteri, a Data Scientist specialized in developing data-driven solutions in the financial sector. <br> <b>I hold a master in Data Science and a bachelor in Business Administration</b>, which allows me to bridge technical expertise with strategic vision, delivering advanced analytics and predictive models that support decision-making and create tangible business value.
+					<p>I’m Giuseppe Palminteri, a Data Scientist specialized in developing data-driven solutions in the financial sector. <br>
+						<b>I hold a master in Data Science and a bachelor in Business Administration</b>, which allows me to bridge technical expertise with strategic vision, delivering advanced analytics and predictive models that support decision-making and create tangible business value.
 						
 	</div>
 
@@ -208,7 +209,8 @@
     <span class="date"> | Sep 2018 - Dec 2021</span>
 </div>
 <div class="timeline-body">
-					<p>Completed a Bachelor's degree in Business Economics, covering core subjects such as Financial Accounting, Economics and Business Management, Corporate Law, Organizational Behavior, and Business Strategy. This academic background provided me with a solid foundation in business principles and management, complementing my current expertise in data science.<p>
+					<p>Completed a Bachelor's degree in Business Economics, covering core subjects such as Financial Accounting, Economics and Business Management, Corporate Law, Organizational Behavior, and Business Strategy. This academic background provided me with a solid foundation in business principles and management, complementing my current expertise in data science.
+						</p>
 								</div>
 							</div>
 						</li>
