Fine descrizione background

--- a/index.html
+++ b/index.html
@@ -191,8 +191,11 @@
 </div>
 </div>
 <div class="timeline-body">
-<p>Currently pursuing a Master's degree in Data Science & Business Informatics, with a focus on data analysis, machine learning, and business strategy. The program includes advanced courses in algorithms, programming , database management, and data mining. These subjects equip me with the technical skills needed to handle complex data challenges, build predictive models, and implement data-driven solutions in business contexts.
-									</p>
+<p>Graduated with a Master's degree in <b>Data Science & Business Informatics</b>, with a focus on data analysis, machine learning and data warehousing. The program includes advanced courses in algorithms, programming , database management, and data mining. These subjects equip me with the technical skills needed to handle complex data challenges, build predictive models, and implement data-driven solutions in business contexts.
+<p>
+ 
+
+</p>
 								</div>
 							</div>
 						</li>
@@ -209,7 +212,10 @@
     <span class="date"> | Sep 2018 - Dec 2021</span>
 </div>
 <div class="timeline-body">
-					<p>Completed a Bachelor's degree in Business Economics, covering core subjects such as Financial Accounting, Economics and Business Management, Corporate Law, Organizational Behavior, and Business Strategy. This academic background provided me with a solid foundation in business principles and management, complementing my current expertise in data science.
+					<p><p>
+Completed a Bachelor's degree in <b>Business Administration</b>, gaining a comprehensive understanding of financial accounting, corporate law, organizational behavior, and business strategy. This program provided a solid foundation in business principles and management, equipping me with the skills to analyze complex business situations and contribute effectively to organizational planning and strategy.
+</p>
+
 						</p>
 								</div>
 							</div>
