--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 						<li class="timeline-heading text-center animate-box">
 							<div><h3>Education</h3></div>
 						</li>
-						<li class="timeline-inverted animate-box">
+						<li class="animate-box">
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -199,7 +199,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="animate-box timeline-unverted">
+						<li class="timeline-inverted animate-box">
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 
@@ -213,7 +213,7 @@
 </div>
 <div class="timeline-body">
 					<p><p>
-Completed a Bachelor's degree in <b>Business Administration</b>, gaining a comprehensive understanding of financial accounting, corporate law, organizational behavior, and business strategy. This program provided a solid foundation in business principles and management, equipping me with the skills to analyze complex business situations and contribute effectively to organizational planning and strategy.
+Completed a Bachelor's degree in <b>Business Administration</b>, gaining a comprehensive understanding of financial accounting, corporate law and business strategy. This program provided a solid foundation in business principles and management, equipping me with the skills to analyze complex business situations and contribute effectively to organizational planning and strategy.
 </p>
 
 						</p>
@@ -363,7 +363,7 @@ Completed a Bachelor's degree in <b>Business Administration</b>, gaining a compr
 			</div>
 		</div>
 	</div>
-	-->
+	
 
 	<div id="fh5co-skills" class="animate-box">
 		<div class="container">
@@ -398,7 +398,25 @@ Completed a Bachelor's degree in <b>Business Administration</b>, gaining a compr
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="80"><span><strong>Google Advertising</strong>80%</span></div>
 				</div>
+
+-->
+
+				<div id="fh5co-skills" class="animate-box text-center">
+    <h2>Skills</h2>
+    <div class="skills-cloud">
+        <span style="font-size: 22px;">Python</span>
+        <span style="font-size: 18px;">SQL</span>
+        <span style="font-size: 20px;">Power BI</span>
+        <span style="font-size: 16px;">PySpark</span>
+        <span style="font-size: 18px;">TensorFlow</span>
+        <span style="font-size: 16px;">Excel</span>
+    </div>
+</div>
+
 <!-- 
+
+
+
 
 			</div>
 			<div class="row">
