--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 						<li class="timeline-heading text-center animate-box">
 							<div><h3>Education</h3></div>
 						</li>
-						<li class="animate-box">
+						<li class="animate-box"></li>
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
@@ -198,8 +198,7 @@
 </p>
 								</div>
 							</div>
-						</li>
-						<li class="timeline-inverted animate-box">
+							<li class="timeline-inverted animate-box"></li>
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 
@@ -219,7 +218,7 @@ Completed a Bachelor's degree in <b>Business Administration</b>, gaining a compr
 						</p>
 								</div>
 							</div>
-						</li>
+							</li>
 					</ul>
 
 						<!--
