--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@ Completed a Bachelor's degree in <b>Business Administration</b>, gaining a compr
 
 							<div class="col-md-6">
 								<div class="fh5co-blog animate-box">
-									<a href="#" class="blog-bg" style="background-image: url(images/sound-engineer-using-mixing-desk_LE_upscale_ultra_x4_intensity_10_size_of_changes_10.jpg);"></a>
+									<a href="#" class="blog-bg" style="background-image: url(images/sound-engineer-using-mixing-desk_LE_upscale_ultra_x4_intensity_10_size_of_changes_10\ copia.jpg);"></a>
 									<div class="blog-text">
 										<span class="posted_on">Mar. 15th 2016</span>
 										<h3><a href="#"></a>BI Analysis <p>from USA Crimes</h3>
