modifiche intro progetti

--- a/index.html
+++ b/index.html
@@ -592,8 +592,8 @@ Completed a Bachelor's degree in <b>Business Administration</b>, gaining a compr
 						<a href="#" class="blog-bg" style="background-image: url(images/vini_immag_LE_upscale_ultra_x4_intensity_10_size_of_changes_10.jpg);"></a>
 						<div class="blog-text">
 							<span class="posted_on">Mar. 15th 2016</span>
-							<h3><a href="#">Emotion Recognition from Speech and Song <p></a></h3>
-							<p>This project analyzes the RAVDESS dataset, which includes audio recordings of 24 actors expressing emotions through spoken and sung phrases. The goal is to explore correlations between recording length, intensity, and emotional expression. The project involves data preparation, clustering, and classification methods to predict emotion types based on these features.<p>
+							<h3><a href="#">End-to-end process in the wine sector <p></a></h3>
+							<p>Master’s thesis on the end-to-end process in the wine sector: migration, modeling, and data visualization with Microsoft Fabric and Power BI. The work involved designing and developing ETL pipelines to integrate company data and creating consolidated data models tailored to the organization’s analytical needs. Finally, interactive dashboards were developed to support data analysis and visualize key performance indicators<p>
 							<ul class="stuff">
 								<li><i class="icon-heart2"></i>249</li>
 								<li><i class="icon-eye2"></i>308</li>
@@ -641,9 +641,9 @@ Completed a Bachelor's degree in <b>Business Administration</b>, gaining a compr
 									<a href="#" class="blog-bg" style="background-image: url(images/sound-engineer-using-mixing-desk_LE_upscale_ultra_x4_intensity_10_size_of_changes_10\ copia.jpg);"></a>
 									<div class="blog-text">
 										<span class="posted_on">Mar. 15th 2016</span>
-										<h3><a href="#"></a>BI Analysis <p>from USA Crimes</h3>
-										<p>This project applied business intelligence techniques to analyze USA crime data, focusing on crime locations, weapons, and offender demographics. It was divided into three phases: creating and populating a database, resolving data issues with SQL Server Integration Services (SSIS), and building a data cube with MDX in SQL Management Studio. Using Power BI, we visualized trends such as homicide rates by state, providing interactive dashboards to explore crime patterns.<p>
-										<ul class="stuff">
+										<h3><a href="#">Emotion Recognition from Speech and Song <p></a></h3>
+							<p>This project analyzes the RAVDESS dataset, which includes audio recordings of 24 actors expressing emotions through spoken and sung phrases. The goal is to explore correlations between recording length, intensity, and emotional expression. The project involves data preparation, clustering, and classification methods to predict emotion types based on these features.<p>
+							<ul class="stuff">
 											<li><i class="icon-heart2"></i>249</li>
 											<li><i class="icon-eye2"></i>308</li>
 											<li><a href="#">Read More<i class="icon-arrow-right22"></i></a></li>
